# news_etl_automation_with_airflow_and_docker

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
dags/: create_table_dag.py  daily_news_dag.py
dags/scripts/: create_table.sql  daily_news_etl.py  utils.py
